objects/Partner_Transition__c.object
<CustomObject>
    <fields>
        <fullName>Additional_team_members_to_involve__c</fullName>
        <label>Additional team members to involve?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Been_part_of_reseller_program_before__c</fullName>
        <label>Been part of reseller program before?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundling_integrating_w_other_products__c</fullName>
        <label>Bundling/integrating w/ other products?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_a_sales_team__c</fullName>
        <label>Do you have a sales team?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_have_specific_prospects_in_mind__c</fullName>
        <label>Do you have specific prospects in mind?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_are_you_currently_marketing__c</fullName>
        <label>How are you currently marketing?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_in_business__c</fullName>
        <label>How long have you been in business?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;1 year</fullName>
                </value>
                <value>
                    <fullName>2-3 years</fullName>
                </value>
                <value>
                    <fullName>4-5 years</fullName>
                </value>
                <value>
                    <fullName>6-10 years</fullName>
                </value>
                <value>
                    <fullName>11-15 years</fullName>
                </value>
                <value>
                    <fullName>16+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IF_YES_what_products__c</fullName>
        <label>IF YES, what products?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IF_YES_which_one__c</fullName>
        <label>IF YES: which one?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Other__c</fullName>
        <label>If Other:</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_who__c</fullName>
        <label>If yes- who?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_commitments_in_1st_month__c</fullName>
        <label>Marketing commitments in 1st month?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>webinar</fullName>
                </value>
                <value>
                    <fullName>newsletter</fullName>
                </value>
                <value>
                    <fullName>direct mailer</fullName>
                </value>
                <value>
                    <fullName>calls to existing clients</fullName>
                </value>
                <value>
                    <fullName>ads</fullName>
                </value>
                <value>
                    <fullName>social campaign</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_employees__c</fullName>
        <label>Number of employees?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Transition</relationshipLabel>
        <relationshipName>Partner_Transition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personality_traits_Notes__c</fullName>
        <label>Personality traits/Notes:</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Projected_of_your_clients_to_buy_lh_yo__c</fullName>
        <label>Projected # of your clients to buy lh/yo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11-25</fullName>
                </value>
                <value>
                    <fullName>26-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_strategy_for_introducing_lh_yo__c</fullName>
        <label>Sales strategy for introducing lh/yo?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_call_scheduled_on__c</fullName>
        <label>Training call scheduled on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_sales_strategy__c</fullName>
        <label>What is your current sales strategy?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_resources_do_you_need_from_us__c</fullName>
        <label>What resources do you need from us?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_selling_supporting_lh_yo__c</fullName>
        <label>Who is selling/supporting lh/yo?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>how_will_you_comp_your_reps__c</fullName>
        <label>how will you comp your reps?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <description>Used to document the Partner Closing Script and transition to training.</description>
    <label>Partner Transition</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Partner Transition  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Transition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_Other_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( INCLUDES(  Marketing_commitments_in_1st_month__c  , "Other"),  ISBLANK(  If_Other__c  ))</errorConditionFormula>
        <errorMessage>You specified Other in Marketing Commitments - Please share what the other is.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_all_details_to_complete</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c , "Complete"),
OR(
ISPICKVAL( Do_you_have_a_sales_team__c ,""),
ISPICKVAL( How_long_have_you_been_in_business__c ,""),  
ISPICKVAL( Number_of_employees__c , ""),  
ISPICKVAL( Bundling_integrating_w_other_products__c ,""),  
ISBLANK( Additional_team_members_to_involve__c ),
ISPICKVAL( Been_part_of_reseller_program_before__c ,""),
ISBLANK( how_will_you_comp_your_reps__c ),
ISBLANK( Who_is_selling_supporting_lh_yo__c ),
ISBLANK( What_is_your_current_sales_strategy__c ),
ISBLANK( Sales_strategy_for_introducing_lh_yo__c ),
ISBLANK( How_are_you_currently_marketing__c ),
ISBLANK(Marketing_commitments_in_1st_month__c),
ISBLANK( Training_call_scheduled_on__c ),
ISBLANK( What_resources_do_you_need_from_us__c ),
ISPICKVAL( Do_you_have_specific_prospects_in_mind__c ,""),
ISPICKVAL( Projected_of_your_clients_to_buy_lh_yo__c ,""),
ISBLANK( Personality_traits_Notes__c )))</errorConditionFormula>
        <errorMessage>Please fill in all the details before marking this as complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Programs</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(  Been_part_of_reseller_program_before__c  , "YES"),  ISBLANK(  IF_YES_which_one__c  ))</errorConditionFormula>
        <errorMessage>Please answer which programs they have participated in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Products</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Bundling_integrating_w_other_products__c , "YES"),  ISBLANK( IF_YES_what_products__c ))</errorConditionFormula>
        <errorMessage>Please fill in what Products they will be bundling with.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specific_Clients</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(  Do_you_have_specific_prospects_in_mind__c  , "YES"),  ISBLANK(  If_yes_who__c  ))</errorConditionFormula>
        <errorMessage>Please specify who the specific clients are.</errorMessage>
    </validationRules>
</CustomObject>